# acm-sync-manager

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  Tiltfile  acm-sync-manager-0.0.1.tgz  acm-sync-manager-0.0.2.tgz  acm-sync-manager-0.0.3.tgz  acm-sync-manager-0.0.4.tgz  acm-sync-manager-0.0.5.tgz  acm-sync-manager-0.0.6.tgz  acm-sync-manager-0.0.7.tgz  acm-sync-manager-0.1.0.tgz  acm-sync-manager-0.2.0.tgz  acm-sync-manager-0.2.1.tgz  acm-sync-manager-0.2.2.tgz  acm-sync-manager-0.2.3.tgz  acm-sync-manager-0.2.4.tgz  acm-sync-manager-0.2.5.tgz  acm-sync-manager-0.2.6.tgz  flake.nix  index.yaml  shell.nix
.github/workflows/: on-pr.yaml  on-release.yaml
charts/acm-sync-manager/: Chart.yaml  values.yaml
charts/acm-sync-manager/templates/: _helpers.tpl  deployment.yaml  prometheus-monitor.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
config/test/: certificate.yaml  deployment.yaml  ingress.yaml
e2e/aws_config/: acm-sync-manager-assume-policy.json  acm-sync-manager-policy.json  cleanup.sh  setup.sh
e2e/config/: cert-manager-issuer.yaml
e2e/kind_config/: config.yaml  install_eks.yaml
nix/: dev.nix  overlay.nix
src/: acm.rs  lib.rs  main.rs  manager.rs  metrics.rs  telemetry.rs
tests/: integration_test.rs
